--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .postlinks {
-    color: $header-heading-color;
+    color: forestgreen;
     text-decoration: none;
 }
 .postlinks:hover {
