--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 h1#posts {
-    color: forestgreen;
+    text-decoration-color: forestgreen;
     text-decoration: none;
 }
 h1#posts:hover {
